# ping-game

./: CMakeLists.txt  README.md  flake.nix
cmake/sdl2/: FindSDL2.cmake
src/: Entities.cpp  Entities.hpp  Game.cpp  Game.hpp  main.cpp
